--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
     "discord.js": "^12.5.1",
+    "dotenv": "^8.2.0",
     "ffmpeg-static": "^4.2.7",
     "yt-search": "^2.5.2",
     "ytdl-core": "^4.4.3"
